# messagelib

./: .arcconfig  .codespellrc  .git-blame-ignore-revs  .gitlab-ci.yml  .kde-ci.yml  .krazy  .pre-commit-config.yaml  .reviewboardrc  CMakeLists.txt  CMakePresets.json  README-ECMInstalledLibraryCheck.md  README-pre-commit.md  REUSE.toml  config-messagelib.h.cmake  messagelib.categories  messagelib.kdev4  messagelib.renamecategories  metainfo.yaml
messagecomposer/: CMakeLists.txt  DESIGN  KF5MessageComposerConfig.cmake.in  KPimMessageComposerConfig.cmake.in  config-messagecomposer.h.in  metainfo.yaml
messagecomposer/autotests/: CMakeLists.txt  attachmentjobtest.cpp  attachmentjobtest.h  attachmentvcardfromaddressbookjobtest.cpp  attachmentvcardfromaddressbookjobtest.h  autocryptheadersjobtest.cpp  autocryptheadersjobtest.h  autocryptresolvercoretest.cpp  autocryptresolvercoretest.h  composertest.cpp  composertest.h  composerviewbasetest.cpp  composerviewbasetest.h  cryptocomposertest.cpp  cryptocomposertest.h  cryptofunctions.cpp  cryptofunctions.h  draftstatustest.cpp  encryptjobtest.cpp  encryptjobtest.h  followupreminderselectdatedialogtest.cpp  followupreminderselectdatedialogtest.h  globalparttest.cpp  globalparttest.h  infoparttest.cpp  infoparttest.h  itipjobtest.cpp  itipjobtest.h  keyresolvertest.cpp  keyresolvertest.h  maintextjobtest.cpp  maintextjobtest.h  messagefactoryngtest.cpp  messagefactoryngtest.h  messagefactorytest.cpp  messagefactorytest.h  multipartjobtest.cpp  multipartjobtest.h  nearexpirycheckertest.cpp  plugineditorcheckbeforesendparamstest.cpp  (+27 more)
messagecomposer/src/: CMakeLists.txt  COMPLIANCE  KPimMessageComposerConfig.cmake.in  Messages.sh  config-messagecomposer.h.cmake  messagecomposer-index.qdoc  messagecomposer-version.h.cmake  messagecomposer.qdoc  messagecomposer.qdocconf  messagecomposer_private_export.h
messagecomposer/tests/: CMakeLists.txt  recipientseditortest.cpp  recipientseditortest.h  testcomposerlineedit.cpp
messagecore/: CMakeLists.txt  KF5MessageCoreConfig.cmake.in  KPimMessageCoreConfig.cmake.in  metainfo.yaml
messagecore/autotests/: CMakeLists.txt  attachmentcompressjobtest.cpp  attachmentcompressjobtest.h  attachmentfrommimecontentjobtest.cpp  attachmentfrommimecontentjobtest.h  attachmentfromurljobtest.cpp  attachmentfromurljobtest.h  attachmentparttest.cpp  attachmentparttest.h  attachmentpropertiesdialogtest.cpp  attachmentpropertiesdialogtest.h  attachmentupdatejobtest.cpp  attachmentupdatejobtest.h  autocryptrecipienttest.cpp  autocryptrecipienttest.h  autocryptstoragetest.cpp  autocryptstoragetest.h  autocryptutilstest.cpp  autocryptutilstest.h  dateformattertest.cpp  mailinglisttest.cpp  mailinglisttest.h  qtest_messagecore.h  stringutiltest.cpp  stringutiltest.h
messagecore/src/: CMakeLists.txt  KPimMessageCoreConfig.cmake.in  Messages.sh  README  messagecore.qdoc  messagecore.qdocconf  messagecore_private_export.h  messagecoreutil.cpp  messagecoreutil.h
messagecore/tests/: CMakeLists.txt  test_dates.cpp  test_mdn.cpp
messagelist/: CMakeLists.txt  KF5MessageListConfig.cmake.in  KPimMessageListConfig.cmake.in  metainfo.yaml
messagelist/autotests/: CMakeLists.txt  itemsizetest.cpp  quicksearchlinetest.cpp  quicksearchlinetest.h  quicksearchwarningtest.cpp  quicksearchwarningtest.h  searchcollectionindexingwarningtest.cpp  searchcollectionindexingwarningtest.h  searchlinestatustest.cpp  searchlinestatustest.h  tablockedwarningtest.cpp  tablockedwarningtest.h
messagelist/src/: CMakeLists.txt  KPimMessageListConfig.cmake.in  Mainpage.dox  Messages.sh  config-messagelist.h.in  messagelist.qdoc  messagelist.qdocconf  messagelist_private_export.h  messagelistutil.cpp  messagelistutil.h  messagelistutil_p.h  pane.cpp  pane.h  storagemodel.cpp  storagemodel.h  tagmanager.cpp  tagmanager.h  widget.cpp  widget.h
messagelist/tests/: CMakeLists.txt  searchlinecommand_gui.cpp  searchlinecommandwidgetgui.cpp  searchlinecommandwidgetgui.h
messageviewer/: CMakeLists.txt  KF5MessageViewerConfig.cmake.in  KF5OtpConfig.cmake.in  KPimMessageViewerConfig.cmake.in  config-messageviewer.h.in  metainfo.yaml
messageviewer/autotests/: CMakeLists.txt  converthtmltoplaintexttest.cpp  cryptohelpertest.h  csshelpertest.cpp  csshelpertest.h  mailsourceviewtextbrowserwidgettest.cpp  mailsourceviewtextbrowserwidgettest.h  messagedisplayformatattributetest.cpp  messagedisplayformatattributetest.h  objecttreeparsertest.cpp  objecttreeparsertest.h  rendertest.cpp  rendertest.h  setupenv.cpp  setupenv.h  testcsshelper.cpp  testcsshelper.h  unencryptedmessagetest.cpp  urlhandlermanagertest.cpp  urlhandlermanagertest.h  util.cpp  util.h  viewergrantleethemesupporttest.cpp  viewergrantleethemesupporttest.h  viewertest.cpp  viewertest.h  zoomactionmenutest.cpp  zoomactionmenutest.h
messageviewer/src/: CMakeLists.txt  KPimMessageViewerConfig.cmake.in  Mainpage.dox  Messages.sh  config-messageviewer.h.cmake  html.cpp  messagepartthemes.qrc  messageviewer.qdoc  messageviewer.qdocconf  messageviewer_private_export.h  objecttreesourceif.h
messageviewer/tests/: CMakeLists.txt  viewertest_gui.cpp
mimetreeparser/: CMakeLists.txt  KF5MimeTreeParserConfig.cmake.in  KPimMimeTreeParserConfig.cmake.in  Messages.sh  metainfo.yaml
mimetreeparser/autotests/: CMakeLists.txt  attachmenttest.cpp  basicobjecttreeparsertest.cpp  basicobjecttreeparsertest.h  bodypartformatterbasefactorytest.cpp  converthtmltoplaintexttest.cpp  converthtmltoplaintexttest.h  cryptohelpertest.cpp  cryptohelpertest.h  csshelpertest.cpp  messageparttest.cpp  messageparttest.h  nodehelpertest.cpp  nodehelpertest.h  objecttreeparsertest.cpp  protectedheaderstest.cpp  protectedheaderstest.h  rendertest.cpp  rendertest.h  setupenv.cpp  setupenv.h  testcsshelper.cpp  testcsshelper.h  testobjecttreesource.h  (+3 more)
templateparser/: .krazy  CMakeLists.txt  KF5TemplateParserConfig.cmake.in  KPimTemplateParserConfig.cmake.in  metainfo.yaml
webengineviewer/: CMakeLists.txt  KF5WebEngineViewerConfig.cmake.in  KPimWebEngineViewerConfig.cmake.in  config-webengineviewer.h.cmake  metainfo.yaml
(+3009 files in other folders)
